--- a/simple_car_store/android/app/src/main/AndroidManifest.xml
+++ b/simple_car_store/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.simple_car_store">
     <application
         android:label="simple_car_store"
         android:name="${applicationName}"
