--- a/simple_car_store/pubspec.yaml
+++ b/simple_car_store/pubspec.yaml
@@ -70,6 +70,13 @@ flutter:
     - assets/images/googleIcon.png
     - assets/images/person.png
     - assets/images/c1.jpg
+    - assets/images/car2.png
+    - assets/images/car3.png
+    - assets/images/car4.png
+    - assets/images/car5.png
+    - assets/images/car6.png
+    - assets/images/car7.png
+    - assets/images/car8.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
