--- a/simple_car_store/pubspec.yaml
+++ b/simple_car_store/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.3.1
   connectivity_plus:
   shared_preferences:
+  firebase_messaging: ^15.1.5
+  cloud_firestore: ^5.4.5
 
 
 dev_dependencies:
