fix sign up and register page
use  firebase sign in , sign out and email verify , change ndk version

--- a/simple_car_store/android/app/build.gradle
+++ b/simple_car_store/android/app/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 android {
     namespace = "com.example.simple_car_store"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "25.1.8937393"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
