--- a/simple_car_store/pubspec.yaml
+++ b/simple_car_store/pubspec.yaml
@@ -37,10 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
-  connectivity_plus:
-  shared_preferences:
+  connectivity_plus: ^6.1.0
   firebase_messaging: ^15.1.5
   cloud_firestore: ^5.4.5
+  awesome_dialog: ^3.2.1
+
 
 
 dev_dependencies:
