--- a/simple_car_store/pubspec.yaml
+++ b/simple_car_store/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_messaging: ^15.1.5
   cloud_firestore: ^5.4.5
   awesome_dialog: ^3.2.1
+  flutter_localization: ^0.2.3
 
 
 
@@ -80,6 +81,8 @@ flutter:
     - assets/images/car6.png
     - assets/images/car7.png
     - assets/images/car8.png
+    - assets/languages/ar.json
+    - assets/languages/en.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
